--- a/index.html
+++ b/index.html
@@ -5,93 +5,153 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nabil Abdelaziz Amin | Software Developer</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Nabil Abdelaziz Amin</h1>
-        <p>Software Development Engineer</p>
-        <p>Cairo, Egypt | 01118792378 | <a href="mailto:nabil.abdelaziz.warda@gmail.com">nabil.abdelaziz.warda@gmail.com</a></p>
-        <p><a href="https://github.com/Nabilwarda">GitHub</a> | <a href="https://www.linkedin.com/in/nabil-abdelaziz-70473a1b7">LinkedIn</a></p>
+        <div class="container">
+            <h1 class="fade-in">Nabil Abdelaziz Amin</h1>
+            <p class="fade-in">Software Development Engineer</p>
+            <p class="fade-in">Cairo, Egypt | 01118792378 | <a href="mailto:nabil.abdelaziz.warda@gmail.com">nabil.abdelaziz.warda@gmail.com</a></p>
+            <p class="fade-in">
+                <a href="https://github.com/Nabilwarda" target="_blank">GitHub</a> | 
+                <a href="https://www.linkedin.com/in/nabil-abdelaziz-70473a1b7" target="_blank">LinkedIn</a>
+            </p>
+        </div>
     </header>
 
-    <section>
-        <h2>Profile</h2>
-        <p>Software Developer with 2+ years of experience in designing and building responsive web designs and web apps. I am proficient with CSS, JS, and have a solid background in Backend Development. Seeking a challenging career with better prospects through actual practice in an esteemed organization. Enthusiastic and eager to contribute to team success through hard work, attention to detail, and excellent organizational skills. Clear understanding of tasks appointed and trainings. Motivated to learn, grow, and excel in my field.</p>
-    </section>
+    <main class="container fade-in">
+        <section>
+            <h2>Profile</h2>
+            <p>Software Developer with 2+ years of experience in designing and building responsive web designs and web apps. I am proficient with CSS, JS, and have a solid background in Backend Development. Seeking a challenging career with better prospects through actual practice in an esteemed organization. Enthusiastic and eager to contribute to team success through hard work, attention to detail, and excellent organizational skills. Clear understanding of tasks appointed and trainings. Motivated to learn, grow, and excel in my field.</p>
+        </section>
 
-    <section>
-        <h2>Professional Experience</h2>
+        <section>
+            <h2>Professional Experience</h2>
 
-        <h3>EBC</h3>
-        <p>Software Development Engineer | 2024/01 – Present | Cairo, Egypt</p>
-        <ul>
-            <li>Managed and contributed to government projects including Meza Network, 123 Network, and InstaPay.</li>
-            <li>Developed and enhanced banking systems under the purview of the Central Bank of Egypt.</li>
-        </ul>
+            <div class="experience">
+                <h3>EBC</h3>
+                <p>Software Development Engineer | 2024/01 – Present | Cairo, Egypt</p>
+                <ul>
+                    <li>Managed and contributed to government projects including Meza Network, 123 Network, and InstaPay, as well as various banking systems under the purview of the Central Bank of Egypt.</li>
+                    <li>Played a key role in the development, implementation, and enhancement of these critical initiatives, ensuring alignment with organizational objectives and regulatory standards.</li>
+                </ul>
+            </div>
 
-        <h3>DECI (Digital Egypt Cubs Initiative)</h3>
-        <p>Instructor | 2024/02 – Present | Ministry of Communication and Information Technology, Cairo, Egypt</p>
-        <ul>
-            <li>Lead instructor for technology workshops tailored for youth to enhance their technological capabilities in alignment with global advancements.</li>
-        </ul>
+            <div class="experience">
+                <h3>DECI (Digital Egypt Cubs Initiative)</h3>
+                <p>Instructor | 2024/02 – Present | Ministry of Communication and Information Technology, Cairo, Egypt</p>
+                <ul>
+                    <li>Lead instructor for technology workshops. Implemented a comprehensive training curriculum tailored for youth to enhance their technological capabilities in alignment with global advancements.</li>
+                </ul>
+            </div>
 
-        <h3>Softic</h3>
-        <p>Supervisor Full Stack Web Development | 2024/03 – 2024/09</p>
-        <ul>
-            <li>Led a team of developers, assigned tasks, and tracked progress.</li>
-            <li>Developed and reviewed code for performance and maintainability.</li>
-        </ul>
+            <div class="experience">
+                <h3>Softic</h3>
+                <p>Supervisor Full Stack Web Development | 2024/03 – 2024/09</p>
+                <ul>
+                    <li>Led a team of developers, assigned tasks, and tracked progress.</li>
+                    <li>Planned projects, defined timelines, and collaborated with stakeholders.</li>
+                    <li>Developed and reviewed code, ensuring quality and best practices.</li>
+                    <li>Refactored code for performance and maintainability.</li>
+                    <li>Designed scalable and efficient architectures.</li>
+                    <li>Mentored junior developers and promoted continuous learning.</li>
+                </ul>
+            </div>
 
-        <h3>SOfCO</h3>
-        <p>Full Stack Developer | 2022/08 – 2024/01 | Cairo, Egypt</p>
-        <ul>
-            <li>Spearheaded the development of over 14 successful websites delivering impactful online experiences.</li>
-            <li>Collaborated with team members to develop new, visually appealing features.</li>
-            <li>Integrated with Restful APIs and seamlessly incorporated external data sources.</li>
-        </ul>
-    </section>
+            <div class="experience">
+                <h3>SOfCO</h3>
+                <p>Full Stack Developer | 2022/08 – 2024/01 | Cairo, Egypt</p>
+                <ul>
+                    <li>Spearheaded the development of over 14 successful websites, delivering impactful online experiences.</li>
+                    <li>Designed dynamic, cross-device compatible web pages for exceptional user experiences.</li>
+                    <li>Optimized applications for maximum speed, scalability, and user engagement.</li>
+                    <li>Collaborated with team members to develop new, visually appealing features.</li>
+                    <li>Built and edited reusable code and libraries, streamlining development processes.</li>
+                    <li>Integrated with Restful APIs and seamlessly incorporated external data sources.</li>
+                </ul>
+            </div>
 
-    <section>
-        <h2>Skills</h2>
-        <ul>
-            <li><strong>Front-End:</strong> HTML, CSS, Bootstrap, SCSS, jQuery, Blazor, Angular, PrimeNG, ngx-bootstrap, ngx-permission</li>
-            <li><strong>Back-End:</strong> PHP, C#, ASP.NET Core, MVC, MVVC</li>
-            <li><strong>Databases:</strong> MySQL, SQL Server</li>
-            <li><strong>Testing:</strong> Unit Test by NUnit, MsUnit</li>
-        </ul>
-    </section>
+            <div class="experience">
+                <h3>CIB</h3>
+                <p>Online Training | 2021/07 – 2021/08 | Cairo, Egypt</p>
+                <ul>
+                    <li>Completed an online training course on financial inclusion, learning how to promote access to financial institutions and products for all individuals. Gained skills in overcoming barriers and implementing inclusive solutions.</li>
+                </ul>
+            </div>
 
-    <section>
-        <h2>Education</h2>
-        <p>Bachelor of Science in Business Information Systems | Helwan University | GPA: 3.84</p>
-    </section>
+            <div class="experience">
+                <h3>Xproject</h3>
+                <p>Delegate Business Development | 2021/02 – 2021/09 | Cairo, Egypt</p>
+                <ul>
+                    <li>Acquired diverse skills in business planning, SWOT analysis, and strategic tools for assessing market dynamics and driving business success.</li>
+                </ul>
+            </div>
 
-    <section>
-        <h2>Certificates</h2>
-        <ul>
-            <li>Effective Communication – Twar w Ghayr</li>
-            <li>InnovEgypt 2020 – TIEC</li>
-            <li>Introduction to Web Development – Future Learning</li>
-            <li>ICDL – MAARF</li>
-            <li>ES6 JS – Mahara Tech</li>
-            <li>Unit Testing for C# – Udemy</li>
-            <li>Entity Framework Complete Guide – Udemy</li>
-        </ul>
-    </section>
+            <div class="experience">
+                <h3>SCCI</h3>
+                <p>IT Member | 2021/10 – 2022/05 | Cairo, Egypt</p>
+                <ul>
+                    <li>Created websites for SCCI and provided comprehensive support to delegates, teaching web development concepts and guiding them through practical sessions.</li>
+                </ul>
+            </div>
+        </section>
 
-    <section>
-        <h2>Projects</h2>
-        <ul>
-            <li><strong>Archiving System (2023):</strong> Developed a user-friendly archiving system for Helwan University, enabling easy file upload, download, and department segmentation.</li>
-            <li><strong>WAVZ (2023):</strong> Developed an interactive presentation on Seamless Payments, Fintech, and Banking in North Africa.</li>
-            <li><strong>Softic Dashboard (2024):</strong> Developed a dashboard for managing Softic’s partners and subscriptions, integrating with the "I Attend" system.</li>
-        </ul>
-    </section>
+        <section>
+            <h2>Skills</h2>
+            <ul class="skills-list">
+                <li><strong>Front-End:</strong> HTML, CSS, Bootstrap, SCSS, jQuery, Blazor, Angular, PrimeNG, Angular Material, ngx-bootstrap, ngx-permission</li>
+                <li><strong>Back-End:</strong> PHP, C#, ASP.NET Core, MVC, MVVC</li>
+                <li><strong>Databases:</strong> MySQL, SQL Server</li>
+                <li><strong>Testing:</strong> Unit Test by NUnit, MsUnit</li>
+                <li><strong>Microsoft Power Apps</strong></li>
+            </ul>
+        </section>
 
-    <section>
-        <h2>Languages</h2>
-        <p>Arabic, English</p>
-    </section>
+        <section>
+            <h2>Education</h2>
+            <p>Bachelor of Science in Business Information Systems | Helwan University | GPA: 3.84 (Excellent) | Graduation Project: 99/100 (Excellent)</p>
+        </section>
+
+        <section>
+            <h2>Certificates</h2>
+            <ul>
+                <li>Effective Communication – Twar w Ghayr</li>
+                <li>InnovEgypt 2020 – TIEC</li>
+                <li>Introduction to Web Development – Future Learning</li>
+                <li>ICDL – MAARF</li>
+                <li>Web Development Challenger Track – FWD</li>
+                <li>ES6 JS – Mahara Tech</li>
+                <li>Unit Testing for C# – Udemy</li>
+                <li>Entity Framework Complete Guide – Udemy</li>
+                <li>Principles of Secure Coding – Udemy</li>
+                <li>C# Advanced Topics – Udemy</li>
+                <li>Intro to Human Resources – M3AARF</li>
+                <li>Fundamentals of Digital Marketing – eyouth, Google</li>
+                <li>Dependency Injection in .NET Core – Udemy</li>
+                <li>SOLID Principles – Udemy</li>
+                <li>Querying Microsoft SQL Server with Transact-SQL – Udemy</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Projects</h2>
+            <ul>
+                <li><strong>Archiving System (2023):</strong> Developed a user-friendly Archiving System for Helwan University, facilitating file upload, department segmentation, and report generation.</li>
+                <li><strong>WAVZ (2023):</strong> Developed an engaging single-page application for an interactive presentation on Seamless Payments, Fintech, and Banking in North Africa.</li>
+                <li><strong>Trending (2022):</strong> Created an interactive website for a marketing agency.</li>
+                <li><strong>Madkour Utility Management System (2022-2023):</strong> Developed and maintained the system, transitioning it from MVC to Blazor.</li>
+                <li><strong>SOFCOSMS (2023):</strong> Played a pivotal role in developing a dynamic website and dashboard using Blazor and C#.</li>
+                <li><strong>I Attend (2024):</strong> Developed a comprehensive system for employee attendance and workflow management, integrating AI-driven person detection, biometric verification, and geofencing.</li>
+                <li><strong>Softic Dashboard (2024):</strong> Developed a dashboard to manage Softic’s partners and their subscriptions, including those integrated with the "I Attend" system.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Languages</h2>
+            <p>Arabic, English</p>
+        </section>
+    </main>
 
     <footer>
         <p>© 2024 Nabil Abdelaziz Amin</p>
